MDEV-16087 Inconsistent SELECT results when query cache is enabled

The following conditions will decide the query cache retrieval or
storing inside innodb:

(1) There should not be any locks on the table.
(2) For read only transaction, a read view has not created then
it doesn't matter what this transaction sees.
(3) For read only/read write transaction, If read view exists then
view low_limit_id is the max trx id that this transaction saw at
the time of the read view creation.